--- a/dynamica/toep_krachten_Coulomb.tex
+++ b/dynamica/toep_krachten_Coulomb.tex
@@ -17,7 +17,7 @@ De \textbf{grootte} van de Coulombkracht \({\overrightarrow{F}}_{C}\)
 puntladingen \(q_{1}\) en \(q_{2}\) met een afstand \(r\ \)tussenbeiden
 is gelijk is aan:
 
-\[{\mathbf{F}_{\mathbf{C}}\mathbf{=}\mathbf{F}}_{\mathbf{e}}\mathbf{= k \bullet}\frac{\left| \mathbf{q}_{\mathbf{1}} \right|\mathbf{\bullet}\left| \mathbf{q}_{\mathbf{2}} \right|}{\mathbf{r}^{\mathbf{2}}}\ met\ k = 8,99 \bullet 10^{9}\frac{N \bullet m²}{C²} \approx 9,0 \bullet 10^{9}\frac{N \bullet m²}{C²}\]
+\[\vec{F}_{C}=\vec{F}_{e}=k\,\frac{|q_{1}|\,|q_{2}|}{r^{2}}\ \text{met}\ k=\SI{8,99e9}{\newton\meter\squared\per\coulomb\squared}\approx\SI{9,0e9}{\newton\meter\squared\per\coulomb\squared}\]
 
 \begin{image}
   \includegraphics{toep_coulomb2}
@@ -25,8 +25,8 @@ is gelijk is aan:
 
 In realistische situaties bij ladingen met afmetingen is r de afstand tussen de middelpunten van die ladingen.
 
-In een elektrisch veld \(\overrightarrow{E}\) is er een eenvoudigere formule:
-\(\ {\overrightarrow{\mathbf{F}}}_{\mathbf{C}}\mathbf{=}{\overrightarrow{\mathbf{F}}}_{\mathbf{e}}\mathbf{= q \bullet}\overrightarrow{\mathbf{E}}\mathbf{\ }\)
+In een elektrisch veld \(\vec{E}\) is er een eenvoudigere formule:
+\(\ \vec{F}_{C}=\vec{F}_{e}=q\,\vec{E}\ \)
 De grootte van \(\overrightarrow{E}\) kan in verschillende situaties bepaald worden naargelang het type veld. 
 Meer details: zie leerstof 5\textsuperscript{de} jaar.
 
