--- a/dynamica/toep_krachten_veerkracht.tex
+++ b/dynamica/toep_krachten_veerkracht.tex
@@ -12,8 +12,8 @@ De veerkracht is een kracht die een uitgerekte of ingedrukte veer uitoefent op e
 Wanneer de veer onbelast is (m.a.w. niet uitgerekt of ingedrukt, maar gewoon ontspannen) dan heeft ze een rustlengte \(\mathcal{l}_{r}\). 
 Bij belasting is de lengte \(\mathcal{l}\) verschillend van rustlengte \(\mathcal{l}_{r}\) en is er een uitrekking/indrukking, hetgeen met \(\mathcal{\mathrm{\Delta}l = l -}\mathcal{l}_{r}\) wordt weergegeven.
 Bij zuiver elastische vervormingen (dit zijn niet al te grote vervormingen zodat bij ontspanning de veer uit zichzelf terug tot aan de rustlengte ontspant) geldt de wet van Hooke als formule voor de grootte van de veerkracht:
-\(\mathbf{\ F}_{\mathbf{v}}\mathbf{= k \bullet}\left| \mathcal{\mathrm{\Delta}l} \right|\mathbf{\ }\).
-Hierin is \(k\) de veerconstante uitgedrukt in \(\frac{N}{m}\). 
+\(F_{v}=k\,\left| \mathcal{\mathrm{\Delta}l} \right|\).
+Hierin is \(k\) de veerconstante uitgedrukt in \(\si{\newton\per\meter}\). 
 De waarde ervan is specifiek voor elke veer en is ook constant indien de veer enkel elastisch vervormt. 
 Ze drukt uit hoeveel Newton kracht de veer zet per meter dat de veer is verlengd/verkort t.o.v. de rustlengte.
 Ze zegt dus iets over de soepelheid of stijfheid van een veer.
@@ -27,9 +27,9 @@ Dit is korter en dus eenvoudiger omdat de lengte van de veer ons meestal niet in
 Dit zal in het vervolg van de cursus ook zo zijn. 
 Meer nog, men kan voor de veerkracht ook een vectoriële formule opstellen indien men de uitrekking/indrukking van de veer als een uitwijkingsvector \(\overrightarrow{x}\) ziet die aangrijpt op de plaats van de rustlengte. Bijgevoegde figuren tonen dit voor een ingedrukte en uitgerekte veer. 
 Er valt op dat de veerkracht telkens de tegengestelde zin heeft van de uitwijkingsvector, waardoor de vectoriële formule wordt:
-\(\ {\ \overrightarrow{F}}_{v} = - k \bullet \overrightarrow{x}\ \). 
+\(\ \vec{F}_{v} = - k\, \vec{x}\ \). 
 Descalaire getalcomponent (waarin met behulp van een gekozen x-as rekening wordt gehouden met de zin van de kracht) wordt dan:
-\({\ F}_{v} = - k \bullet x\ \).
+\(F_{v} = - k\, x\ \).
 
 \[\mathcal{l}_{r}\]
 
