--- a/dynamica/toep_krachten_wrijving.tex
+++ b/dynamica/toep_krachten_wrijving.tex
@@ -9,7 +9,7 @@
     \xmsource\xmuitleg
 
 
-= weerstandskracht \({\overrightarrow{F}}_{w}\) op een voorwerp van een
+= weerstandskracht \(\vec{F}_{w}\) op een voorwerp van een
 medium of middenstof waarin of waartegen het zich bevindt
 
 % \includegraphics[width=2.08889in,height=1.81111in,alt={E:\textbackslash School updated tot en met 27\_08\_2012\textbackslash Fysica 6de jaar\textbackslash Afbeeldingen\textbackslash wrijving.gif}]{media/image8.gif}\textbf{Schuifwrijvingskracht}
@@ -26,11 +26,11 @@ Voor de schuifwrijvingskracht \({\overrightarrow{F}}_{w}\) wordt vastgesteld dat
 \item\ldots indien het voorwerp een rechtlijnige beweging maakt:
 \end{enumerate}
 
-De zin van \({\overrightarrow{F}}_{w}\) is tegen de zin van de beweging en de grootte van \({\overrightarrow{F}}_{w}\) is recht evenredig is met de grootte van de normaalkracht en tegelijk afhankelijk van hoe goed of slecht de materialen van het voorwerp en vlakke ondergrond over mekaar schuiven.
+De zin van \(\vec{F}_{w}\) is tegen de zin van de beweging en de grootte van \(\vec{F}_{w}\) is recht evenredig is met de grootte van de normaalkracht en tegelijk afhankelijk van hoe goed of slecht de materialen van het voorwerp en vlakke ondergrond over mekaar schuiven.
 
-Er geldt dan: \(F_{w} = \mu \bullet F_{n}\) met \(\mu\) de schuifwrijvingsfactor of schuifwrijvingscoëfficiënt (op te zoeken in tabellen)
+Er geldt dan: \(F_{w} = \mu \cdot F_{n}\) met \(\mu\) de schuifwrijvingsfactor of schuifwrijvingscoëfficiënt (op te zoeken in tabellen)
 
-Bovenstaande omkaderde formule is dus de maximale waarde van de schuifwrijvingskracht, waardoor de formule beter te schrijven is als: \(F_{w,max} = \mu \bullet F_{n}\). 
+Bovenstaande omkaderde formule is dus de maximale waarde van de schuifwrijvingskracht, waardoor de formule beter te schrijven is als: \(F_{w,max} = \mu \cdot F_{n}\). 
 Men kan overigens aantonen dat deze laatste formule ook klopt bij bewegingen die niet rechtlijnig zijn (zie verder voor voorbeelden). 
 \textit{(zie ook animatie Hans Bekaert: ``wrijving'')}
 
@@ -38,9 +38,9 @@ Men kan overigens aantonen dat deze laatste formule ook klopt bij bewegingen die
 \def\labelenumi{\alph{enumi})}
 \setcounter{enumi}{2}
 \item
-  \ldots indien het voorwerp een ECB maakt: \({\overrightarrow{F}}_{w}\)
+  \ldots indien het voorwerp een ECB maakt: \(\vec{F}_{w}\)
   heeft die grootte zodat
-  \(F_{r} = m \bullet a = m \bullet \frac{v^{2}}{r} = m \bullet \omega ² \bullet r\)
+  \(F_{r} = m \cdot a = m \cdot \frac{v^{2}}{r} = m \cdot \omega^{2} \cdot r\)
 \end{enumerate}
 
 Bij het maken van een bocht (bijvoorbeeld ECB) is er in sommige gevallen schuifwrijvingskracht die bijdraagt tot de middelpuntzoekende kracht. 
