--- a/dynamica/toep_krachten_Lorentz.tex
+++ b/dynamica/toep_krachten_Lorentz.tex
@@ -1,6 +1,7 @@
 \documentclass{ximera}
 
 %\addPrintStyle{..}
+% 
 
 
 \begin{document}
@@ -11,30 +12,177 @@
 
 = kracht op bewegende lading in een magnetisch veld (dat veroorzaakt wordt door andere bewegende ladingen)
 
-De \textbf{grootte} van de Lorentzkracht \({\overrightarrow{F}}_{L}\) (of magnetische kracht \({\overrightarrow{F}}_{m}\)) op een lading \(q\) met snelheid \(\overrightarrow{v}\) die een hoek \(\alpha\) maakt met de magnetische veldsterkte \(\overrightarrow{B}\) waar de lading door vliegt is te berekenen met:
+De \textbf{grootte} van de Lorentzkracht \(\vec{F}_{L}\) (of magnetische kracht \(\vec{F}_{m}\)) op een lading \(q\) met snelheid \(\vec{v}\) die een hoek \(\alpha\) maakt met de magnetische veldsterkte \(\vec{B}\) waar de lading door vliegt is te berekenen met:
 
-\[{\mathbf{F}_{\mathbf{L}}\mathbf{= F}}_{\mathbf{m}}\mathbf{= B \bullet}\left| \mathbf{q} \right|\mathbf{\bullet v \bullet}\mathbf{\sin}\mathbf{\alpha}\ met\ \alpha = hoek\ tussen\ \overrightarrow{B}\ en\ \overrightarrow{v}\]
+\[F_{L}=F_{m}=B\,|q|\,v\,\sin\alpha\ \text{met}\ \alpha=\text{hoek tussen } \vec{B}\ \text{en } \vec{v}\]
 
 Als vele ladingen samen een gemeenschappelijke driftsnelheid hebben door
-een magneetveld hebben (vaak door een geleidende draad met lengte \(\mathcal{l}\)) beschouwt men dit als een stroom \(I\) in een magneetveld \(\overrightarrow{B}\). 
+een magneetveld hebben (vaak door een geleidende draad met lengte \(\mathcal{l}\)) beschouwt men dit als een stroom \(I\) in een magneetveld \(\vec{B}\). 
 Dan wordt de formule:
 
-\[{\mathbf{F}_{\mathbf{L}}\mathbf{= F}}_{\mathbf{m}}\mathbf{= B \bullet I}\mathcal{\bullet l \bullet}\mathbf{\sin}\mathbf{\alpha}\ met\ \alpha = hoek\ tussen\ \overrightarrow{B}\ en\ I\ \ (ook\ Laplacekracht\ genoemd)\]
+\[F_{L}=F_{m}=B\,I\,\mathcal{l}\,\sin\alpha\ \text{met}\ \alpha=\text{hoek tussen } \vec{B}\ \text{en } I\ \ (\text{ook Laplacekracht genoemd})\]
+
+% \begin{image}
+%   % \includegraphics{toep_rechterhand}
+%   \includegraphics{rechterhandregel}
+% \end{image}
+
+
+% ===================================================================
+% FIXES FOR XIMERA COMPATIBILITY (applied to the Lorentz force diagram)
+% ===================================================================
+%
+% PROBLEM 1: Memory overflow (input stack size)
+%   → Caused by: node[scale=1.5], node[scale=1.4], "\huge" in pic label
+%   → These trigger recursive font selection inside \includegraphics + tikzscale
+%   → Ximera's 'image' environment uses tikzscale → reprocesses picture → crash
+%
+% FIX 1: Replace ALL 'scale=...' with 'font=\large' or 'font=\LARGE'
+%   → \large and \LARGE are single font switches → no recursion
+%
+% PROBLEM 2: Parsing error on "\theta" in pic label
+%   → Ximera uses Babel with active " (shorthand) + fragile tikzscale parsing
+%   → "$\theta$" or {$\theta$} breaks string → \theta seen as color name → crash
+%
+% FIX 2: Remove quotes from pic label + place \theta with manual \node
+%   → Use: \pic [...] {angle = V--O--B};  (no label)
+%   → Then: \node[font=\LARGE] at (calc coord) {$\theta$};
+%   → Requires: \usetikzlibrary{calc}
 
 \begin{image}
-  % \includegraphics{toep_rechterhand}
-  \includegraphics{rechterhandregel}
+  % RIGHT HAND RULE: F = qvxB
+\begin{tikzpicture}
+  \coordinate (O) at (1.0,0.7); % ORIGIN
+  \coordinate (WT) at ( 2.9,-1.1); % WRIST TOP
+  \coordinate (T1) at ( 2.3, 0.7); % THUMB
+  \coordinate (T2) at ( 1.75, 2.3);
+  \coordinate (T3) at ( 2.0, 3.1);
+  \coordinate (T4) at (1.38, 3.15);
+  \coordinate (T5) at ( 0.9, 2.3);
+  \coordinate (T6) at ( 0.85, 1.2);
+  \coordinate (T7) at ( 0.85, 0.2);
+  \coordinate (I1) at (-1.1, 2.45); % INDEX
+  \coordinate (I2) at (-2.9, 3.45);
+  \coordinate (I3) at (-3.3, 2.9);
+  \coordinate (I4) at (-1.5, 1.8);
+  \coordinate (I5) at (-0.9, 1.1);
+  \coordinate (I6) at (-0.9, 0.3);
+  \coordinate (M1) at (-2.1, 0.9); % MIDDLE
+  \coordinate (M2) at (-3.95,0.55);
+  \coordinate (M3) at (-4.0,-0.15);
+  \coordinate (M4) at (-2.3, 0.05);
+  \coordinate (M5) at (-1.1, 0.20);
+  \coordinate (R1) at (-1.9,-0.1); % RING
+  \coordinate (R2) at (-1.8,-0.7);
+  \coordinate (R3) at (-0.3,-1.5);
+  \coordinate (R4) at ( 0.1,-1.7);
+  \coordinate (R5) at ( 0.1,-1.0);
+  \coordinate (R6) at (-0.5,-0.7);
+  \coordinate (R7) at (-1.2,-0.3);
+  \coordinate (P1) at (-1.9,-1.3); % PINKY
+  \coordinate (P2) at (-0.8,-1.9);
+  \coordinate (P3) at (-0.2,-2.1);
+  \coordinate (P4) at (-0.05,-1.65);
+  \coordinate (W1) at ( 0.4,-2.9); % WRIST BOTTOM
+  \coordinate (W2) at ( 1.6,-3.5);
+  
+  % HAND
+  \fill[pinkskin]
+    (WT) -- (T6) -- (I5) -- (M5) -- (R2) -- (P2) -- (W2) to[out=25,in=-90] cycle;
+  \draw[fill=pinkskin]
+    (WT) to[out=120,in=-60] % THUMB
+    (T1) to[out=120,in=-90]
+    (T2) to[out=80,in=-110]
+    (T3) to[out=80,in=50,looseness=1.5] % tip
+    (T4) to[out=-130,in=80]
+    (T5) to[out=-100,in=70]
+    (T6) to[out=-100,in=100]
+    (T7)
+    (T6) to[out=150,in=-30] % INDEX
+    (I1) to[out=150,in=-30]
+    (I2) to[out=150,in=145,looseness=1.7] % tip
+    (I3) to[out=-30,in=150]
+    (I4) to[out=-30,in=105]
+    (I5) to[out=-75,in=90]
+    (I6)
+    (I5) to[out=-170,in=10] % MIDDLE
+    (M1) to[out=-170,in=10]
+    (M2) to[out=-170,in=-175,looseness=1.8] % tip
+    (M3) to[out=5,in=-170]
+    (M4) to[out=10,in=-170] % bottom knuckle
+    (M5)
+    (M5) to[out=-160,in=50] % RING
+    (R1) to[out=-130,in=140,looseness=1.2]
+    (R2) to[out=-30,in=160]
+    (R3) --
+    (R4) to[out=-20,in=-20,looseness=1.5] % tip
+    (R5) --
+    (R6) to[out=140,in=8,looseness=0.9]
+    (R7)
+    (R2) to[out=-160,in=155] % PINKY
+    (P1) to[out=-35,in=150]
+    (P2) to[out=-30,in=160]
+    (P3) to[out=-20,in=-30,looseness=1.5] % tip
+    %(P4) --
+    (R4)
+    (P2) to[out=-50,in=140] % WRIST
+    (W1) to[out=-40,in=160]
+    (W2);
+  
+  % FOLDS
+  \draw[very thin] (T5)++(-80:0.3) to[out=40,in=180]++ (25:0.45); % THUMB
+  \draw[very thin] (I1)++(180:0.2) to[out=-160,in=90]++ (-130:0.6); % INDEX
+  \draw[very thin] (I1)++(155:1.3) to[out=-150,in=80]++ (-130:0.55);
+  \draw[very thin] (M4)++(30:0.2) to[out=80,in=-65]++ (95:0.5); % MIDDLE FINGER
+  \draw[very thin] (M3)++(10:0.8) to[out=80,in=-75]++ (90:0.45);
+  \draw[very thin] (M5)++(-140:0.1) to[out=-20,in=90]++ (-54:0.8); % RING
+  \draw[very thin] (R6) to[out=160,in=10]++ (180:0.2);
+  \draw[very thin] (R3)++(155:0.5) to[out=120,in=-100]++ (100:0.2);
+  \draw[very thin] (P2)++(140:0.1) to[out=95,in=-110]++ (80:0.4); % PINKY
+  %\draw[very thin] (P1)++( 10:0.04) to[out=95,in=-130]++ (70:0.4);
+  \draw[very thin] (I5)++(-40:0.45) to[out=-70,in=90]++ (-70:1.7);    % PALM
+  \draw[very thin] (P3)++(-155:0.05) to[out=-120,in=40]++ (-130:0.2); % PALM
+  \draw[very thin] (W2)++(70:1.4) to[out=-175,in=-40]++ (160:1.4); % PALM
+  
+% === VECTORS ===
+  \def\R{0.32}
+  \draw[force]
+    (O) --++ (82:3.2)
+    node[above, font=\large] {$\vb{F} = q {\color{veccol}\vb{v}} \times {\color{Bcol}\vb{B}}$};
+
+  \draw[velocity]
+    (O) --++ (148:3.3) coordinate (V)
+    node[above left, font=\large] {$\vb{v}$};
+
+  \draw[charge+] (O) circle (\R) node[font=\large] {$+$};
+
+  \draw[BField]
+    (O)++(-172:0.7*\R) --++ (-172:3.25) coordinate (B)
+    node[above left, font=\large] {$\vb{B}$};
+
+  % Angle arc
+  \pic [draw, ->, thick, angle radius=28, angle eccentricity=1.26] {angle = V--O--B};
+
+  % Theta label (safe placement)
+  \node [font=\LARGE] at ( $ (V)!0.5!(O) ! 0.4 ! 90:(O) $ ) {$\theta$};
+
+\end{tikzpicture}
+
 \end{image}
+\captionof{figure}{De rechterhandregel \protect \footnotemark}
+\footnotetext{\Tikzsource{https://tikz.net/righthand_rule/}{Izaak Neutelings}}
 
-De richting en zin van \({\overrightarrow{F}}_{L}\) kan bepaald worden met de derde rechterhandregel waarin geredeneerd wordt met de conventionele stroomzin van de ladingen.
 
-\emph{\textbf{Uitbreiding:} De Coulombkracht en de Lorentzkracht kunnen samengevat worden tot één elektromagnetische kracht, want beide gevallen gaan over kracht op een lading.}
+De richting en zin van \(\vec{F}_{L}\) kan bepaald worden met de derde rechterhandregel waarin geredeneerd wordt met de conventionele stroomzin van de ladingen.
 
-\begin{quote}
-\[{{\overrightarrow{\mathbf{F}}}_{\mathbf{em}}\mathbf{=}{\overrightarrow{\mathbf{F}}}_{\mathbf{C}}\mathbf{+}{\overrightarrow{\mathbf{F}}}_{\mathbf{L}}\mathbf{= q}\overrightarrow{\mathbf{E}}\mathbf{+ q}\overrightarrow{\mathbf{v}}\mathbf{\times}\overrightarrow{\mathbf{B}}\mathbf{= q}\left( \overrightarrow{\mathbf{E}}\mathbf{+}\overrightarrow{\mathbf{v}}\mathbf{\times}\overrightarrow{\mathbf{B}} \right)\mathbf{\ \ \ \ 
-}}
-\](\(\times is\ het\ symbool\ voor\ vectorieel\ product,\ zie\ externe\ cursussen\))
-\end{quote}
-
+\begin{xmuitweiding}
+  De Coulombkracht en de Lorentzkracht kunnen samengevat worden tot één elektromagnetische kracht, want beide gevallen gaan over kracht op een lading.
+  
+  
+    \[\vec{F}_{em}=\vec{F}_{C}+\vec{F}_{L}=q\,\vec{E}+q\,\vec{v}\times\vec{B}=q\left(\vec{E}+\vec{v}\times\vec{B}\right)\]
+    
+    (\(\times\) is het symbool voor vectorieel product, zie externe cursussen)
+  
+\end{xmuitweiding}
 
 \end{document}
