--- a/dynamica/toep_krachten_gravitatie.tex
+++ b/dynamica/toep_krachten_gravitatie.tex
@@ -15,9 +15,9 @@
   \includegraphics{toep_coulomb}
 \end{image}
 
-De \textbf{grootte} van de gravitatiekracht \({\overrightarrow{F}}_{G}\) tussen twee puntmassa's \(m_{1}\) en \(m_{2}\) met een afstand \(r\ \) tussenbeiden is gelijk is aan:
+De \textbf{grootte} van de gravitatiekracht \(\vec{F}_{G}\) tussen twee puntmassa's \(m_{1}\) en \(m_{2}\) met een afstand \(r\ \) tussenbeiden is gelijk is aan:
 
-\[\mathbf{F}_{\mathbf{G}}\mathbf{= G \bullet}\frac{\mathbf{m}_{\mathbf{1}}{\mathbf{.}\mathbf{m}}_{\mathbf{2}}}{\mathbf{r}^{\mathbf{2}}}\ \text{met} \ G = 6,67 \bullet \SI{1e-11}{\newton\meter\squared\per\kilo\gram\squared} = gravitatieconstante\]
+\[F_{G}=G\,\frac{m_{1}\,m_{2}}{r^{2}}\ \text{met}\ G=\SI{6,67e-11}{\newton\meter\squared\per\kilo\gram\squared}=\text{gravitatieconstante}\]
 
 In realistische situaties bij voorwerpen met afmetingen is \(r\) de afstand tussen de zwaartepunten van die voorwerpen. 
 Vaak valt het zwaartepunt samen met het midden van het voorwerp (zeker bij voorwerpen met homogene massaverdeling).
@@ -26,13 +26,13 @@ In de context van hemellichamen wordt gravitatiekracht vaak zwaartekracht genoem
 Dit verschilt enkel in benaming, maar beide benamingen weerspiegelen identiek hetzelfde krachtfenomeen. 
 In het Engels of Frans bestaat er geen woord voor ``zwaartekracht'', zij kennen enkel \emph{gravity} of \emph{gravité}.
 
-In een gravitatieveld \(\overrightarrow{g}\) is er een eenvoudigere formule:
-\(\ {\overrightarrow{\mathbf{F}}}_{\mathbf{G}}\mathbf{=}{\overrightarrow{\mathbf{F}}}_{\mathbf{z}}\mathbf{= m \bullet}\overrightarrow{\mathbf{g}}\mathbf{\ }\)
+In een gravitatieveld \(\vec{g}\) is er een eenvoudigere formule:
+\(\ \vec{F}_{G}=\vec{F}_{z}=m\,\vec{g}\ \)
 
 Rond een hemellichaam met massa \(M\) geldt:
-\(g = \frac{G \bullet M}{r²}\) 
+\(g = \frac{G\,M}{r^{2}}\) 
 Op het aardoppervlak, levert dit:
-\(g_{A} = 9,81\frac{N}{kg} \approx 10\frac{N}{kg}\)
+\(g_{A} = \SI{9,81}{\newton\per\kilo\gram} \approx \SI{10,0}{\newton\per\kilo\gram}\)
 
 
 
@@ -51,11 +51,11 @@ Op het aardoppervlak, levert dit:
 	Een ander argument dat Newton gebruikte om zijn voorstel voor de formule van de universele gravitatiekracht te corroboreren\footnote{Een moeilijk woord dat `met argumenten staven' betekent.}, was een redenering over de versnelling van de maan.\footnote{Zijn berekeningen borg hij op omdat ze niet strookte met de realiteit. Enkele jaren later bleek echter dat de door astronomen gebruikte afstand tot de maan fout was. Een nieuwe waarde toonde aan dat Newton een correcte redenering had gebruikt.} Ze gaat als volgt. De maan maakt een nagenoeg cirkelvormige beweging. Haar versnelling is dus te berekenen met de formule voor de versnelling van een ECB. We hebben dan de omlooptijd en de afstand tot de maan nodig. De straal van de cirkelbeweging van de maan is ongeveer 60 keer de straal van de aarde.
 	\begin{eqnarray*}
 		a&=&r\omega^2=r\left(\frac{2\pi}{T}\right)^2\\
-		&=&6370\cdot10^3\rm\,m\cdot60\cdot\left(\frac{2\pi}{27,3\cdot24\cdot60\cdot60\rm\,s}\right)^2=0,0027\rm\,m/s^2
+		&=&\SI{6370e3}{\meter}\cdot60\cdot\left(\frac{2\pi}{\SI{27,3}{\day}}\right)^2=\SI{0,0027}{\meter\per\second\squared}
 	\end{eqnarray*}
-	Dit getal komt overeen met een omgekeerd kwadratische afhankelijkheid van de straal. Nemen we namelijk de valversnelling op aarde, $9,81\rm\,m/s^2$ en delen we deze door $60^2$ (de maan bevindt zich immers 60 keer zo ver), dan krijgen we hetzelfde getal.
+	Dit getal komt overeen met een omgekeerd kwadratische afhankelijkheid van de straal. Nemen we namelijk de valversnelling op aarde, \(\SI{9,81}{\meter\per\second\squared}\) en delen we deze door \(60^2\) (de maan bevindt zich immers 60 keer zo ver), dan krijgen we hetzelfde getal.
 	\begin{eqnarray*}
-		a=\frac{9,81\rm\,m/s^2}{60^2}=0,0027\rm\,m/s^2
+		a=\frac{\SI{9,81}{\meter\per\second\squared}}{60^2}=\SI{0,0027}{\meter\per\second\squared}
 	\end{eqnarray*}
 	Hiermee had Newton een argument om aan te nemen dat de gravitatiekracht omgekeerd evenredig moet zijn met het kwadraat van de onderlinge afstand tussen de massa's.
 	
@@ -74,7 +74,7 @@ Op het aardoppervlak, levert dit:
 	De evenredigheidscoöefficiënt $G$ wordt de
 	\textit{gravitatieconstante} genoemd.
 	\begin{eqnarray}\nonumber
-	G&=&6,67\cdot10^{-11}\rm\,\frac{Nm^2}{kg^2}
+	G&=&\SI{6,67e-11}{\newton\meter\squared\per\kilo\gram\squared}
 	\end{eqnarray}
 	\end{minipage}}
 	\end{center}
