--- a/dynamica/toep_krachten_trekkracht.tex
+++ b/dynamica/toep_krachten_trekkracht.tex
@@ -9,13 +9,13 @@
     \xmsource\xmuitleg
 
 
-Om een touw op de spannen moet er aan beide uiteindes een kracht gezet worden, \textbf{trekkracht} \({\overrightarrow{\mathbf{F}}}_{\mathbf{t}}\) genaamd. 
+Om een touw op de spannen moet er aan beide uiteindes een kracht gezet worden, \textbf{trekkracht} \(\vec{F}_{t}\) genaamd. 
 Deze staat altijd evenwijdig met het touw en met zin weg van het touw. 
 Zolang het touw niet knapt, is elke grootte voor \({\overrightarrow{F}}_{t}\) mogelijk, afhankelijk van de situatie. 
 Uiteraard heeft elk touw een maximale trekkracht alvorens het knapt (maar in onze oefeningen veronderstellen we sterke touwen die niet knappen).
 
 \textbf{Touwkracht} is de kracht die een touw zet op hetgeen eraan vasthangt, de reactiekracht van de trekkracht dus. 
-Voor de eenvoud noemen we dit ook \({\overrightarrow{\mathbf{F}}}_{\mathbf{t}}\). 
+Voor de eenvoud noemen we dit ook \(\vec{F}_{t}\). 
 Uit de derde wet van Newton zijn deze toch even groot.
 
 Indien een touw zeer klein in massa is (of massaloos verondersteld wordt), dan wordt er aan beide uiteindes altijd even hard getrokken. 
