--- a/SPC/dynamica.tex
+++ b/SPC/dynamica.tex
@@ -18,15 +18,15 @@
 
 \setcounter{part}{3}
 
-\part{Dynamica: De wetten van Newton}
+% \part{Dynamica: De wetten van Newton}
 
-\activitychapter{../dynamica/dynamica_intro.tex}
-\activitychapter{../dynamica/newton_eerste_wet.tex}
-\activitychapter{../dynamica/newton_tweede_wet.tex}
-\activitychapter{../dynamica/newton_derde_wet.tex}
-\activitychapter{../dynamica/exercises/oefeningen.tex} 
-\activitysection{../dynamica/exercises/denkvragen.tex}
-\activitysection{../dynamica/exercises/vraagstukken.tex}
+% \activitychapter{../dynamica/dynamica_intro.tex}
+% \activitychapter{../dynamica/newton_eerste_wet.tex}
+% \activitychapter{../dynamica/newton_tweede_wet.tex}
+% \activitychapter{../dynamica/newton_derde_wet.tex}
+% \activitychapter{../dynamica/exercises/oefeningen.tex} 
+% \activitysection{../dynamica/exercises/denkvragen.tex}
+% \activitysection{../dynamica/exercises/vraagstukken.tex}
 % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
