--- a/dynamica/toep_krachten_gravitatie.tex
+++ b/dynamica/toep_krachten_gravitatie.tex
@@ -3,6 +3,8 @@
 %\addPrintStyle{..}
 
 
+
+
 \begin{document}
 	\author{Bart Lambregs}
 	\xmtitle{De gravitatiekracht of zwaartekracht (veldkracht)}{}
@@ -21,6 +23,43 @@ De \textbf{grootte} van de gravitatiekracht \(\vec{F}_{G}\) tussen twee puntmass
 
 In realistische situaties bij voorwerpen met afmetingen is \(r\) de afstand tussen de zwaartepunten van die voorwerpen. 
 Vaak valt het zwaartepunt samen met het midden van het voorwerp (zeker bij voorwerpen met homogene massaverdeling).
+
+
+\begin{image}
+	\begin{tikzpicture}
+		\def\d{4.1}  % distance r
+		\def\r{0.3}  % small radius ball
+		\def\R{0.38} % large radius ball
+		\def\F{0.95} % force magnitude
+		\def\u{0.4}  % unit vector magnitude
+		\def\ang{5}  % angle lin
+		\coordinate (M1) at (0,0);
+		\coordinate (M2) at (\ang:\d);
+		
+		% SETUP
+		\draw[measure,-]
+		  (M1) --++ (\ang+90:1.6*\R)
+		  (M2) --++ (\ang+90:1.6*\R);
+		\draw[measure] ($(M1)+(\ang+90:1.35*\R)$) --++ (M2)
+		  node[midway,circle,fill=white,inner sep=0] {$r$};
+		\draw[dashed] (M1) -- (M2);
+		\draw[mass] (M1) circle(\r) node[scale=0.9] {$m_1$};
+		\draw[mass] (M2) circle(\R) node[scale=0.9] {$m_2$};
+		
+		% FORCES
+		\draw[force] (M1)++(\ang-8:0.9*\r) --++ (\ang:\F)
+		  node[anchor=90,inner sep=4] {$\vbF_{21}$}; % = -G\dfrac{m_1m_2}{r^2}\vu{r}_{21}
+		\draw[force] (M2)++(\ang-172:0.9*\R) --++ (\ang:-\F)
+		  node[anchor=130,inner sep=3] {$\vbF_{12}$}; % = -G\dfrac{m_1m_2}{r^2}\vu{r}_{12}
+		\draw[unit] (M1)++(\ang+8:\r+0.02) --++ (\ang:\u)
+		  node[pos=0.8,above=-1] {$\vu{r}_{12}$};
+		\draw[unit] (M2)++(\ang+172:\R+0.02) --++ (\ang:-\u)
+		  node[pos=0.6,above=-1] {$\vu{r}_{21}$};
+		
+	  \end{tikzpicture}
+	\end{image}
+	\captionof{figure}{De gravitatiekracht \protect \footnotemark}
+	\footnotetext{\Tikzsource{https://tikz.net/category/physics/}{Izaak Neutelings}}
 
 In de context van hemellichamen wordt gravitatiekracht vaak zwaartekracht genoemd. 
 Dit verschilt enkel in benaming, maar beide benamingen weerspiegelen identiek hetzelfde krachtfenomeen. 
