--- a/dynamica/toep_krachten_veerkracht.tex
+++ b/dynamica/toep_krachten_veerkracht.tex
@@ -1,6 +1,5 @@
 \documentclass{ximera}
 
-%\addPrintStyle{..}
 
 
 \begin{document}
@@ -32,6 +31,73 @@ Descalaire getalcomponent (waarin met behulp van een gekozen x-as rekening wordt
 \(F_{v} = - k\, x\ \).
 
 \[\mathcal{l}_{r}\]
+
+
+
+\begin{image}
+
+% HORIZONTAL spring - axis, extended
+\begin{tikzpicture}
+  \def\H{1.1}  % wall height
+  \def\T{0.3}  % wall thickness
+  \def\W{3.9}  % ground length
+  \def\D{0.25} % ground depth
+  \def\h{0.7}  % mass height
+  \def\w{0.8}  % mass width
+  \def\x{2.0}  % mass x position
+  \def\dx{0.8} % extension
+  \def\y{1.22*\H} % x axis y position
+  \def\F{0.8}  % force
+  
+  % AXIS
+  \draw[mydashed] (\x,0) --++ (0,\y) (\x+\dx,0) --++ (0,1.1*\y);
+  \draw[axis] (\x-0.4*\W,\y) -- (\x+0.4*\W,\y) node[right] {$x$};
+  \tick{\x,\y}{-90} node[scale=0.8,above=-1] {$0$};
+  \draw[ell] (0,1.3*\h) --++ (\x,0) node[midway,fill=white,inner sep=0] {$\ell_0$};
+  \draw[dx] (\x,1.6*\h) --++ (\dx,0) node[pos=0.45,fill=white,inner sep=0] {$x$};
+  
+  % SPRING & MASS
+  \draw[spring,segment length=7.5] (0,\h/2) --++ (\x+\dx,0);
+  \draw[ground] (0,0) |-++ (-\T,\H) |-++ (\T+\W,-\H-\D) -- (\W,0) -- cycle;
+  \draw (0,\H) -- (0,0) -- (\W,0);
+  \draw[mass] (\x+\dx,0) rectangle++ (\w,\h) node[midway] {$m$};
+  \draw[force] (\x+\dx+0.2*\w,0.9*\h) --++ (-\F,0) node[midway,right=1,above=-1] {$\vb{F}$};
+  
+\end{tikzpicture}
+
+
+% HORIZONTAL spring - axis, compressed
+\begin{tikzpicture}
+  \def\H{1.1} % wall height
+  \def\T{0.3} % wall thickness
+  \def\W{3.9} % ground length
+  \def\D{0.2} % ground depth
+  \def\h{0.7} % mass height
+  \def\w{0.8} % mass width
+  \def\x{2.0} % mass x position
+  \def\dx{0.9} % extension
+  \def\y{1.22*\H} % x axis y position
+  \def\F{0.8} % force
+  
+  % AXIS
+  \draw[mydashed] (\x,0) --++ (0,\y) (\x-\dx,0) --++ (0,1.1*\y);
+  \draw[axis] (\x-0.4*\W,\y) -- (\x+0.4*\W,\y) node[right] {$x$};
+  \tick{\x,\y}{-90} node[scale=0.8,above=-1] {$0$};
+  \draw[ell] (0,1.3*\h) --++ (\x,0) node[pos=0.4,fill=white,inner sep=0] {$\ell_0$};
+  \draw[dx] (\x,1.6*\h) --++ (-\dx,0)
+    node[pos=0.45,fill=white,inner sep=0,scale=0.9] {$x$};
+  
+  % SPRING & MASS
+  \draw[spring,segment length=2.9] (0,\h/2) --++ (\x-\dx,0);
+  \draw[ground] (0,0) |-++ (-\T,\H) |-++ (\T+\W,-\H-\D) -- (\W,0) -- cycle;
+  \draw (0,\H) -- (0,0) -- (\W,0);
+  \draw[mass] (\x-\dx,0) rectangle++ (\w,\h) node[midway] {$m$};
+  \draw[force] (\x-\dx+0.8*\w,0.8*\h) --++ (\F,0) node[below=0,right=-1] {$\vb{F}$};
+  
+\end{tikzpicture}
+\end{image}
+\captionof{figure}{De veerkracht \protect \footnotemark}
+\footnotetext{\Tikzsource{https://tikz.net/category/physics/}{Izaak Neutelings}}
 
 
 \end{document}
