--- a/dynamica/toep_krachten_wrijving.tex
+++ b/dynamica/toep_krachten_wrijving.tex
@@ -64,5 +64,48 @@ Bovenvermelde formules zijn enkel van toepassing voor schuifwrijving! \textbf{Ro
 \end{remark}
   
 
+\begin{image}
+
+% HORIZONTAL ground - lift
+\begin{tikzpicture}
+  \def\W{3.6}  % ground width
+  \def\D{0.2}  % ground depth
+  \def\H{1.9}  % human height
+  \def\h{0.8}  % mass height
+  \def\w{1.0}  % mass width
+  \def\mx{0.10*\W} % mass x coordinate
+  
+  % SETUP
+  \draw[ground] (-0.5*\W,0) rectangle++ (\W,-\D);
+  \draw (-0.5*\W,0) --++ (\W,0);
+  \draw[mass] (\mx,0) rectangle++ (\w,\h) node[midway] {$m$};
+  
+  % PERSON
+  \coordinate (H) at (0,0.75*\H);
+  \draw[thick,line cap=round]
+    (H)++(-165:0.3) to[out=-140,in=60]++ (-130:0.3)
+    to[out=65,in=-90,looseness=1.0]++ (80:0.45) to[out=90,in=120,looseness=1.4]++ (20:0.2); % pony tail
+  \draw[thick,fill=white] (H) circle (0.3);
+  \draw[thick,line cap=round] (H)++(-140:0.3) to[out=80,in=-120,looseness=1.8]++ (40:0.6); % hair
+  \draw[thick] (H)++(-120:0.3) coordinate (N) to[out=-115,in=40]++ (-130:0.36*\H) coordinate (P);
+  \draw[thick,line cap=round] (N)++(-115:0.03) to[out=-60,in=170] (1.04*\mx,\h);
+  \draw[thick,line cap=round] (N)++(-115:0.03) to[out=-70,in=170] (\mx,0.92*\h);
+  \draw[thick,line cap=round] (P) to[out=-120,in=30,looseness=1.3] (-0.35*\W,0);
+  \draw[thick,line cap=round] (P) to[out=-50,in=30,looseness=1.8] (-0.22*\W,0);
+  
+  % FORCES
+  \ifthenelse{\boolean{showforces}}{
+    \draw[<->] (\mx+1.4*\w,2.1*\h) node[below=2,left=0] {$y$}
+      |-++ (0.7*\h,-0.7*\h) node[right=0] {$x$};
+    \draw[force] (\mx+0.3*\w,0.05*\h) --++ (0, 1.3*\h) node[above] {$\vbF_\mathrm{N}$};
+    \draw[force] (\mx+0.8*\w,0.50*\h) --++ (0,-1.3*\h) node[right=5,below=-3] {$-mg\vu{y}$};
+    \draw[force] (\mx+0.9*\w,0.80*\h) --++ ( 0.9*\h,0) node[right] {$\vbF$};
+    \draw[force] (\mx+0.1*\w,0.10*\h) --++ (-0.9*\h,0) node[right=6,above=1] {$\vbF_\mathrm{f}$};
+  }{}
+  
+\end{tikzpicture}
+\end{image}
+\captionof{figure}{De wrijvingskracht \protect \footnotemark}
+\footnotetext{\Tikzsource{https://tikz.net/category/physics/}{Izaak Neutelings}}
 
 \end{document}
