--- a/dynamica/toep_krachten_Coulomb.tex
+++ b/dynamica/toep_krachten_Coulomb.tex
@@ -17,16 +17,44 @@ De \textbf{grootte} van de Coulombkracht \({\overrightarrow{F}}_{C}\)
 puntladingen \(q_{1}\) en \(q_{2}\) met een afstand \(r\ \)tussenbeiden
 is gelijk is aan:
 
-\[{\mathbf{F}_{\mathbf{C}}\mathbf{=}\mathbf{F}}_{\mathbf{e}}\mathbf{= k \bullet}\frac{\left| \mathbf{q}_{\mathbf{1}} \right|\mathbf{\bullet}\left| \mathbf{q}_{\mathbf{2}} \right|}{\mathbf{r}^{\mathbf{2}}}\ met\ k = 8,99 \bullet 10^{9}\frac{N \bullet m²}{C²} \approx 9,0 \bullet 10^{9}\frac{N \bullet m²}{C²}\]
+\[\vec{F}_{C}=\vec{F}_{e}=k\,\frac{|q_{1}|\,|q_{2}|}{r^{2}}\ \text{met}\ k=\SI{8,99e9}{\newton\meter\squared\per\coulomb\squared}\approx\SI{9,0e9}{\newton\meter\squared\per\coulomb\squared}\]
 
 \begin{image}
   \includegraphics{toep_coulomb2}
 \end{image}
 
+
+\begin{image}
+  \begin{tikzpicture}
+
+    \def\a{2.5}
+    \def\R{0.33}
+    \def\F{1.8}
+    
+    \coordinate (L) at (-\a,0);
+    \coordinate (R) at (+\a,0);
+      
+    % FORCES
+    \draw[force] (L) --++ (+\F,0) node[above left] {$\mathbf{F}_{21}$};
+    \draw[force] (R) --++ (-\F,0) node[above right] {$\mathbf{F}_{12}$};
+    
+    % CHARGES
+    \draw[charge+] (L) circle (\R) node[scale=1.2] {$+$};
+    \draw[charge-] (R) circle (\R) node[scale=1.2] {$-$};
+    \draw[<->]     (L)++(\R,-1.1*\R) --++ (2*\a-2*\R,0) node[midway,below] {r};
+    \node[above] at (-\a,\R) {$q_1$};
+    \node[above] at (+\a,\R) {$q_2$};
+    
+  \end{tikzpicture}
+\end{image}
+\captionof{figure}{De Coulombkracht \protect \footnotemark}
+\footnotetext{\Tikzsource{https://tikz.net/category/physics/}{Izaak Neutelings}}
+
+
 In realistische situaties bij ladingen met afmetingen is r de afstand tussen de middelpunten van die ladingen.
 
-In een elektrisch veld \(\overrightarrow{E}\) is er een eenvoudigere formule:
-\(\ {\overrightarrow{\mathbf{F}}}_{\mathbf{C}}\mathbf{=}{\overrightarrow{\mathbf{F}}}_{\mathbf{e}}\mathbf{= q \bullet}\overrightarrow{\mathbf{E}}\mathbf{\ }\)
+In een elektrisch veld \(\vec{E}\) is er een eenvoudigere formule:
+\(\ \vec{F}_{C}=\vec{F}_{e}=q\,\vec{E}\ \)
 De grootte van \(\overrightarrow{E}\) kan in verschillende situaties bepaald worden naargelang het type veld. 
 Meer details: zie leerstof 5\textsuperscript{de} jaar.
 
